--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,13 @@
 #spring.datasource.username = b9411f6a685ca3
 #spring.datasource.password = 3380b4d7
 
-spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_c3c477bfee8068d?reconnect=true
-spring.datasource.username = b6cb453afc90d0
-spring.datasource.password = 99bf2d09
+#spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_c3c477bfee8068d?reconnect=true
+#spring.datasource.username = b6cb453afc90d0
+#spring.datasource.password = 99bf2d09
+
+spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_b2497f522a3b134?reconnect=true
+spring.datasource.username = b9dcc8704d6630
+spring.datasource.password = 673e9d2a
 
 server.port = 8080
 
