--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # -- DEVELOP DATABASE --
-#spring.datasource.url = jdbc:mysql://localhost:3306/db_booking
-#spring.datasource.username = manager1
-#spring.datasource.password = 1234
+spring.datasource.url = jdbc:mysql://localhost:3306/db_booking
+spring.datasource.username = manager1
+spring.datasource.password = 1234
 
 # -- PRODUCTION DATABASE --
 #spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_160eff170b1b2a5?reconnect=true
@@ -12,9 +12,9 @@
 #spring.datasource.username = b6cb453afc90d0
 #spring.datasource.password = 99bf2d09
 
-spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_b2497f522a3b134?reconnect=true
-spring.datasource.username = b9dcc8704d6630
-spring.datasource.password = 673e9d2a
+#spring.datasource.url = jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_b2497f522a3b134?reconnect=true
+#spring.datasource.username = b9dcc8704d6630
+#spring.datasource.password = 673e9d2a
 
 server.port = 8080
 
